--- a/resources/localization/list.txt
+++ b/resources/localization/list.txt
@@ -52,6 +52,7 @@ src/slic3r/GUI/UpdateDialogs.cpp
 src/slic3r/GUI/WipeTowerDialog.cpp
 src/slic3r/GUI/wxExtensions.cpp
 src/slic3r/Utils/AstroBox.cpp
+src/slic3r/Utils/Repetier.cpp
 src/slic3r/Utils/Duet.cpp
 src/slic3r/Utils/FixModelByWin10.cpp
 src/slic3r/Utils/FlashAir.cpp
